BUG#33172 : Backup operation too slow?

This patch includes changes made based on reviews:

1) open_schema_table signature corrected
2) documentation gaff fixed